# termAI

./: README.md  geminikey.txt  main.py  pyproject.toml  setup.py
ai_terminal_assiatant/: cli.py  config.py  core.py
ai_terminal_assistant/: __init__.py  cli.py
termAI.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
