[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termAI"
version = "1.0.0"
description = "AI-powered terminal assistant to convert natural language into shell commands."
authors = [{ name="Ruvais", email="ruvaispuv@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "click",
    "google-generativeai"
]

[project.scripts]
ata = "ai_terminal_assistant.cli:main"

